# multi-channel-audio-recorder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  audio_recorder.py  pyproject.toml  requirements.txt
src/multi_channel_audio_recorder/: __init__.py  __main__.py  cli.py  paths.py  recorder.py
tests/: test_cli.py  test_filename.py  test_segments.py
